--- a/css/main.css
+++ b/css/main.css
@@ -25,9 +25,15 @@ html {
 }
 
 .banner {
-
+  color: #fff;
+  position: relative;
 }
 
 .banner-content {
-
+  overflow: hidden;
+  position: absolute;
+  left: 10px;
+  right: 10px;
+  bottom: 20px;
+  max-width:
 }
