--- a/css/main.css
+++ b/css/main.css
@@ -27,13 +27,13 @@ html {
 .banner {
   color: #fff;
   position: relative;
+  overflow: hidden;
+  max-height: 24em;
 }
 
 .banner-content {
-  overflow: hidden;
   position: absolute;
   left: 10px;
   right: 10px;
   bottom: 20px;
-  max-width:
 }
