--- a/css/main.css
+++ b/css/main.css
@@ -33,7 +33,7 @@ html {
 
 .banner-content {
   position: absolute;
-  left: 10px;
-  right: 10px;
-  bottom: 20px;
+  left: 0;
+  bottom: 0;
+  width: 100%;
 }
